# fyp-visualisation-flask

./: .gitattributes  .gitignore  Dockerfile  cleaned.pq  docker-compose.yml  main.py  pyproject.toml  shell.nix
templates/: base.html  data.html  graphs.html
