[project]
name = "flask-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash-bootstrap-templates>=2.1.0",
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "scipy>=1.15.2",
    "setuptools>=78.1.0",
]
